--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Sam Goddard <hello@samgoddard.co.uk>",
   "dependencies": {
+    "@react-three/drei": "^4.1.5",
+    "@react-three/fiber": "^6.0.10",
     "framer-motion": "^1.8.4",
     "gatsby": "^2.19.12",
     "gatsby-image": "^2.2.40",
@@ -19,7 +21,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "react-icons": "^3.9.0"
+    "react-icons": "^3.9.0",
+    "three": "^0.127.0"
   },
   "devDependencies": {
     "postcss-import": "^12.0.1",
