--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "three": "^0.127.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "postcss-import": "^12.0.1",
     "postcss-import-resolver": "^2.0.0",
     "postcss-nested": "^4.2.1",
@@ -40,7 +41,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public --branch master",
+    "deploy:github": "gatsby build && gh-pages -d public",
     "build": "gatsby build",
     "dev": "gatsby clean && gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
